--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,27 @@
 
   <body>
 
-    
+    <div>
+      <div>
+        Department logo
+      </div>
+
+      <div>
+        Exemplar 9
+        View driving record <span>Beta</span>
+        <p>If you’re a driver you’ll be able to view information from your record, including what vehicles you can drive and any penalty points and disqualifications</p>
+        <p>www.gov.uk/view-driving-licence</p>
+      </div>
+
+      <div>
+        Users online now
+        <div>20</div>
+      </div>
+
+      <div>
+        91.5% user satisfaction
+      </div>
+    </div>
 
     <script src="assets/scripts/jquery.2.1.1.js" type="text/javascript"></script>
     <script src="assets/scripts/application.js" type="text/javascript"></script>
