--- a/views/assets/scss/application.scss
+++ b/views/assets/scss/application.scss
@@ -1,6 +1,7 @@
 @import '_colours';
 @import '_typography';
 @import '_measurements';
+@import 'design-patterns/_alpha-beta';
 
 $discovery: $purple;
 $alpha: $pink;
@@ -17,15 +18,113 @@ body {
   padding: 0;
   margin: 0;
   font-family: "nta", Arial, sans-serif;
-  font-weight: bold;
-  font-size: 70px;
+  font-weight: normal;
+  font-size: 250%; // 40px
   line-height: 1;
   color: $black;
   background-color: $white;
   text-rendering: opitimizeLegibility;
 }
 
+p {
+  line-height: 1.4; 
+}
+
+img {
+  max-width: 100%;
+}
+
 /* ******************************************************** */
+
+.item {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  padding: 4.5%; 
+}
+
+.details, .data {
+  display: table-cell;
+  vertical-align: top;
+}
+
+
+/* ******************************************************** */
+
+.crest {
+  width: 12%;
+}
+
+.url {
+  position: absolute;
+  bottom: 9%;
+}
+
+
+/* ******************************************************** */
+
+.details {
+  width: 66.666%;
+  padding: 7% 4.5% 0 0;
+}
+
+.exemplar {
+  font-size: 120%;
+  color: $grey-2;
+}
+
+.name {
+  font-size: 160%;
+  font-weight: bold;
+}
+
+.phase-tag {
+  @include phase-tag;
+  font-size: inherit;
+
+  &.beta {
+    background-color: $beta;
+  }
+  &.live {
+    background-color: $live;
+  }
+
+}
+
+.caption {
+  max-width: 50em;
+}
+
+
+/* ******************************************************** */
+
+.data {
+  width: 33.333%;
+}
+
+.circle {
+  width: 100%;
+  height: 0;
+  margin-top: 4.5%;
+  padding-bottom: 100%;
+  border-radius: 100%;
+  background-color: $grey-2;
+  text-align: center;
+
+  .inner {
+    padding: 15% 0 0 0;
+    font-weight: bold;
+    line-height: 1.2;
+  }
+
+  img {
+    width: 80%;
+  }
+
+}
+
+
+
 
 /*#slide-container {
   transition: margin-left 1s ease-in-out;
