--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,6 @@
 
     <title></title>
 
-    <link href="assets/stylesheets/govuk-template-print.css?0.8.1" media="print" rel="stylesheet" type="text/css" />
-
     <link href="assets/stylesheets/fonts.css" media="all" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
 
@@ -15,26 +13,34 @@
 
   <body>
 
-    <div>
-      <div>
-        Department logo
+    <div class="item">
+    
+      <div class="crest">
+        <img src="assets/images/crest-DoT.svg">
       </div>
 
-      <div>
-        Exemplar 9
-        View driving record <span>Beta</span>
-        <p>If you’re a driver you’ll be able to view information from your record, including what vehicles you can drive and any penalty points and disqualifications</p>
-        <p>www.gov.uk/view-driving-licence</p>
+      <div class="details">
+        <div class="exemplar">Exemplar 9</div>
+        <div class="name">View driving record <span class="phase-tag beta">Beta</span></div>
+        <p class="caption">If you’re a driver you’ll be able to view information from your record, including what vehicles you can drive and any penalty points and disqualifications</p>
       </div>
 
-      <div>
-        Users online now
-        <div>20</div>
+      <div class="data">
+        <div class="circle">
+          <div class="inner">
+            <img src="assets/images/icon-users.svg">
+            <div class="online">
+              <span id="number">20</span> Users online now
+            </div>
+            <div class="satisfaction">91.5% satisfaction</div>
+          </div>
+        </div>
       </div>
 
-      <div>
-        91.5% user satisfaction
+      <div class="url">
+        www.gov.uk/view-driving-licence
       </div>
+
     </div>
 
     <script src="assets/scripts/jquery.2.1.1.js" type="text/javascript"></script>
