--- a/views/assets/scss/application.scss
+++ b/views/assets/scss/application.scss
@@ -8,6 +8,101 @@ $alpha: $pink;
 $beta: $orange;
 $live: $grass-green;
 
+/* ******************************************************** */
+
+// Animation bits because I am LEARNING
+
+.cover {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 0;
+  background-color: $white;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: $white;
+}
+
+.crest-cover {
+  position: relative;
+  margin-top: -3.6em;
+  right: 0;
+  height: 3.4em;
+}
+
+.title-cover {
+  position: relative;
+  margin-top: -3.3em;
+  right: 0;
+  height: 3.3em;
+}
+
+.lede {
+  opacity: 0;
+  transform: translateX(10px);
+}
+
+.url {
+  opacity: 0;
+  transform: translateX(10px);
+}
+
+.circle {
+  opacity: 0;
+  transform: scale(0.98);
+}
+
+body.bring-in {
+
+  .crest-cover .slider {
+    width: 85%;
+    transition: width 0.5s ease-out;
+  }
+
+  .title-cover .slider {
+    width: 0;
+    transition: width 0.75s ease-out 0.3s;
+  }
+
+  .lede {
+    opacity: 1;
+    transform: translateX(0);
+    transition: all 0.5s ease-out 0.85s;
+  }
+
+  .url {
+    opacity: 1;
+    transform: translateX(0);
+    transition: all 0.5s ease-out 1.15s;
+  }
+
+  .circle {
+    opacity: 1;
+    transform: scale(1);
+    transition: all 0.25s ease-out 1.7s;
+  }
+
+}
+
+body.slide-out {
+
+  .cover {
+    height: 100%;
+    transition: height 0.5s ease-out;
+  }
+
+}
+
+
+/* ******************************************************** */
+
 html, body {
   width: 100%;
   height: 100%;
@@ -91,7 +186,7 @@ img {
 
 }
 
-.caption {
+.lede {
   max-width: 50em;
 }
 
@@ -103,6 +198,7 @@ img {
 }
 
 .circle {
+  position: relative;
   width: 100%;
   height: 0;
   margin-top: 4.5%;
@@ -110,33 +206,32 @@ img {
   border-radius: 100%;
   background-color: $grey-2;
   text-align: center;
-
-  .inner {
-    padding: 15% 0 0 0;
-    font-weight: bold;
-    line-height: 1.2;
-  }
-
-  img {
-    width: 80%;
-  }
-
 }
 
+.inner {
+  // trick to get a square box at a flexible width
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 15% 0 0 0;
 
-
-
-/*#slide-container {
-  transition: margin-left 1s ease-in-out;
-  overflow: hidden;
-  display: table;
-  width: 100%;
-  height: 100%;
+  &:after {
+    content: '';
+    display: block;
+    padding-top: 100%;
+  }
 }
 
-.slide {
-  display: table-cell;
-  vertical-align: middle;
-  width: 100%;
-  height: 100%;
-}*/
+#number {
+  font-size: 450%;
+  font-weight: bold;
+}
+
+.caption {
+  line-height: 1.2;
+  small {
+    display: block;
+  }
+}
