--- a/views/assets/stylesheets/application.css
+++ b/views/assets/stylesheets/application.css
@@ -36,6 +36,84 @@
 @-o-viewport {
   width: device-width;
 }
+/* ******************************************************** */
+.cover {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 0;
+  background-color: white;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+}
+
+.crest-cover {
+  position: relative;
+  margin-top: -3.6em;
+  right: 0;
+  height: 3.4em;
+}
+
+.title-cover {
+  position: relative;
+  margin-top: -3.3em;
+  right: 0;
+  height: 3.3em;
+}
+
+.lede {
+  opacity: 0;
+  transform: translateX(10px);
+}
+
+.url {
+  opacity: 0;
+  transform: translateX(10px);
+}
+
+.circle {
+  opacity: 0;
+  transform: scale(0.98);
+}
+
+body.bring-in .crest-cover .slider {
+  width: 85%;
+  transition: width 0.5s ease-out;
+}
+body.bring-in .title-cover .slider {
+  width: 0;
+  transition: width 0.75s ease-out 0.3s;
+}
+body.bring-in .lede {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 0.5s ease-out 0.85s;
+}
+body.bring-in .url {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 0.5s ease-out 1.15s;
+}
+body.bring-in .circle {
+  opacity: 1;
+  transform: scale(1);
+  transition: all 0.25s ease-out 1.7s;
+}
+
+body.slide-out .cover {
+  height: 100%;
+  transition: height 0.5s ease-out;
+}
+
+/* ******************************************************** */
 html, body {
   width: 100%;
   height: 100%;
@@ -137,7 +215,7 @@ img {
   background-color: #85994b;
 }
 
-.caption {
+.lede {
   max-width: 50em;
 }
 
@@ -147,6 +225,7 @@ img {
 }
 
 .circle {
+  position: relative;
   width: 100%;
   height: 0;
   margin-top: 4.5%;
@@ -155,26 +234,29 @@ img {
   background-color: #bfc1c3;
   text-align: center;
 }
-.circle .inner {
+
+.inner {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   padding: 15% 0 0 0;
+}
+.inner:after {
+  content: '';
+  display: block;
+  padding-top: 100%;
+}
+
+#number {
+  font-size: 450%;
   font-weight: bold;
+}
+
+.caption {
   line-height: 1.2;
 }
-.circle img {
-  width: 80%;
+.caption small {
+  display: block;
 }
-
-/*#slide-container {
-  transition: margin-left 1s ease-in-out;
-  overflow: hidden;
-  display: table;
-  width: 100%;
-  height: 100%;
-}
-
-.slide {
-  display: table-cell;
-  vertical-align: middle;
-  width: 100%;
-  height: 100%;
-}*/
