--- a/views/index.html
+++ b/views/index.html
@@ -13,37 +13,48 @@
 
   <body>
 
-    <div class="item">
-    
-      <div class="crest">
-        <img src="assets/images/crest-DoT.svg">
-      </div>
+    <div id="template-target" class="item"></div>
+
+    <div class="cover"></div>
+
+    <script src="assets/scripts/jquery.2.1.1.js" type="text/javascript"></script>
+    <script src="assets/scripts/mustache.js" type="text/javascript"></script>
+    <script src="assets/scripts/application.js" type="text/javascript"></script>
+
+    <script id="template" type="x-tmpl-mustache">
+
+      <div class="crest"><img src="{{ crest }}"></div>
+
+      <div class="crest-cover"><div class="slider"></div></div>
 
       <div class="details">
-        <div class="exemplar">Exemplar 9</div>
-        <div class="name">View driving record <span class="phase-tag beta">Beta</span></div>
-        <p class="caption">If you’re a driver you’ll be able to view information from your record, including what vehicles you can drive and any penalty points and disqualifications</p>
+        <div class="exemplar">Exemplar {{ number }}</div>
+        <div class="name">{{ title }} <span class="phase-tag {{ status }}">{{ status }}</span></div>
+
+        <div class="title-cover"><div class="slider"></div></div>
+
+        <p class="lede">{{ intro }}</p>
+
       </div>
 
       <div class="data">
-        <div class="circle">
+
+        <div class="circle last-to-show">
           <div class="inner">
-            <img src="assets/images/icon-users.svg">
             <div class="online">
-              <span id="number">20</span> Users online now
+              <span id="number">67.1k</span>
+              <div class="caption">
+                digital applications
+                <small>over the past 9 weeks</small>
+              </div>
             </div>
-            <div class="satisfaction">91.5% satisfaction</div>
           </div>
         </div>
+
       </div>
 
-      <div class="url">
-        www.gov.uk/view-driving-licence
-      </div>
+      <div class="url">{{ url }}</div>
+    </script>
 
-    </div>
-
-    <script src="assets/scripts/jquery.2.1.1.js" type="text/javascript"></script>
-    <script src="assets/scripts/application.js" type="text/javascript"></script>
   </body>
 </html>
