More data, use handlebars

--- a/views/assets/scss/application.scss
+++ b/views/assets/scss/application.scss
@@ -183,6 +183,10 @@ img {
   &.live {
     background-color: $live;
   }
+  &.public {
+    color: $black;
+    background-color: transparent;
+  }
 
 }
 
