--- a/views/index.html
+++ b/views/index.html
@@ -18,10 +18,12 @@
     <div class="cover"></div>
 
     <script src="assets/scripts/jquery.2.1.1.js" type="text/javascript"></script>
-    <script src="assets/scripts/mustache.js" type="text/javascript"></script>
+    <!--<script src="assets/scripts/mustache.js" type="text/javascript"></script>-->
+    <script src="assets/scripts/handlebars-v1.3.0.js" type="text/javascript"></script>
     <script src="assets/scripts/application.js" type="text/javascript"></script>
 
-    <script id="template" type="x-tmpl-mustache">
+    <!--<script id="template" type="x-tmpl-mustache">-->
+    <script id="template" type="text/x-handlebars-template">
 
       <div class="crest"><img src="{{ crest }}"></div>
 
@@ -29,7 +31,15 @@
 
       <div class="details">
         <div class="exemplar">Exemplar {{ number }}</div>
-        <div class="name">{{ title }} <span class="phase-tag {{ status }}">{{ status }}</span></div>
+
+
+        <div class="name">
+          {{ title }} 
+          <span class="phase-tag {{ status }}">{{ status }}</span>
+          {{#if publicbeta}}
+            <span class="phase-tag public">public</span>
+          {{/if}}
+        </div>
 
         <div class="title-cover"><div class="slider"></div></div>
 
@@ -42,10 +52,10 @@
         <div class="circle last-to-show">
           <div class="inner">
             <div class="online">
-              <span id="number">67.1k</span>
+              <span id="number">{{ stat }}</span>
               <div class="caption">
-                digital applications
-                <small>over the past 9 weeks</small>
+                {{ statline }}
+                <small>{{ qualifier }}</small>
               </div>
             </div>
           </div>
