--- a/views/assets/stylesheets/application.css
+++ b/views/assets/stylesheets/application.css
@@ -55,20 +55,6 @@
   background-color: white;
 }
 
-.crest-cover {
-  position: relative;
-  margin-top: -4.2em;
-  right: 0;
-  height: 4.2em;
-}
-
-.title-cover {
-  position: relative;
-  margin-top: -3.3em;
-  right: 0;
-  height: 3.3em;
-}
-
 .lede {
   opacity: 0;
   transform: translateX(10px);
@@ -84,13 +70,17 @@
   transform: scale(0.98);
 }
 
-body.bring-in .crest-cover .slider {
-  width: 80%;
+body.bring-in .crest .slider {
+  width: 0;
   transition: width 0.5s ease-out;
 }
-body.bring-in .title-cover .slider {
-  width: 0;
+body.bring-in .exemplar .slider {
+  width: 65%;
   transition: width 0.75s ease-out 0.3s;
+}
+body.bring-in .name .slider {
+  width: 0;
+  transition: width 1s ease-out 0.3s;
 }
 body.bring-in .lede {
   opacity: 1;
@@ -154,6 +144,7 @@ img {
 
 /* ******************************************************** */
 .crest {
+  position: relative;
   width: 16%;
 }
 
@@ -169,12 +160,14 @@ img {
 }
 
 .exemplar {
-  font-size: 120%;
+  position: relative;
+  font-size: 110%;
   color: #bfc1c3;
 }
 
 .name {
-  font-size: 160%;
+  position: relative;
+  font-size: 140%;
   font-weight: bold;
 }
 
@@ -195,7 +188,8 @@ img {
   text-decoration: none;
   color: #fff;
   background-color: #d53880;
-  font-size: inherit;
+  font-size: 75%;
+  margin-right: 0;
 }
 @media (min-width: 641px) {
   .phase-tag {
@@ -235,7 +229,8 @@ img {
   margin-top: 4.5%;
   padding-bottom: 100%;
   border-radius: 100%;
-  background-color: #bfc1c3;
+  background-color: #dee0e2;
+  color: #0b0c0c;
   text-align: center;
 }
 
@@ -254,7 +249,7 @@ img {
 }
 
 #number {
-  font-size: 450%;
+  font-size: 375%;
   font-weight: bold;
 }
 
