--- a/views/index.html
+++ b/views/index.html
@@ -18,20 +18,22 @@
     <div class="cover"></div>
 
     <script src="assets/scripts/jquery.2.1.1.js" type="text/javascript"></script>
-    <!--<script src="assets/scripts/mustache.js" type="text/javascript"></script>-->
     <script src="assets/scripts/handlebars-v1.3.0.js" type="text/javascript"></script>
     <script src="assets/scripts/application.js" type="text/javascript"></script>
 
-    <!--<script id="template" type="x-tmpl-mustache">-->
     <script id="template" type="text/x-handlebars-template">
 
-      <div class="crest"><img src="{{ crest }}"></div>
-
-      <div class="crest-cover"><div class="slider"></div></div>
+      <div class="crest">
+        <img src="{{ crest }}">
+        <div class="slider"></div>
+      </div>
 
       <div class="details">
-        <div class="exemplar">Exemplar {{ number }}</div>
 
+        <div class="exemplar">
+          Exemplar {{ number }}
+          <div class="slider"></div>
+        </div>
 
         <div class="name">
           {{ title }} 
@@ -39,9 +41,8 @@
           {{#if publicbeta}}
             <span class="phase-tag public">public</span>
           {{/if}}
+          <div class="slider"></div>
         </div>
-
-        <div class="title-cover"><div class="slider"></div></div>
 
         <p class="lede">{{ intro }}</p>
 
