Right, first draft

--- a/views/index.html
+++ b/views/index.html
@@ -44,7 +44,7 @@
           <div class="slider"></div>
         </div>
 
-        <p class="lede">{{ intro }}</p>
+        <p class="lede">{{{ intro }}}</p>
 
       </div>
 
@@ -56,11 +56,12 @@
               <span id="number">{{ stat }}</span>
               <div class="caption">
                 {{ statline }}
-                <small>{{ qualifier }}</small>
               </div>
             </div>
           </div>
+          <div id="circle-cover"></div>
         </div>
+
 
       </div>
 
