--- a/views/assets/scss/application.scss
+++ b/views/assets/scss/application.scss
@@ -54,30 +54,30 @@ body.bring-in {
 
   .exemplar .slider {
     width: 65%;
-    transition: width 0.75s ease-out 0.3s;
+    transition: width 0.75s ease-out 0.5s;
   }
 
   .name .slider {
     width: 0;
-    transition: width 1s ease-out 0.3s;
+    transition: width 1s ease-out 0.75s;
   }
 
   .lede {
     opacity: 1;
     transform: translateX(0);
-    transition: all 0.5s ease-out 0.85s;
+    transition: all 0.5s ease-out 1.5s;
   }
 
   .url {
     opacity: 1;
     transform: translateX(0);
-    transition: all 0.5s ease-out 1.15s;
+    transition: all 0.5s ease-out 1.6s;
   }
 
   .circle {
     opacity: 1;
     transform: scale(1);
-    transition: all 0.25s ease-out 1.7s;
+    transition: all 0.25s ease-out 2.5s;
   }
 
 }
@@ -170,7 +170,7 @@ img {
 .phase-tag {
   @include phase-tag;
   font-size: 75%;
-  margin-right: 0;
+  margin: 0 0.2em;
 
   &.beta {
     background-color: $beta;
@@ -181,6 +181,7 @@ img {
   &.public {
     color: $black;
     background-color: transparent;
+    margin: 0;
   }
 
 }
@@ -200,7 +201,6 @@ img {
   position: relative;
   width: 100%;
   height: 0;
-  margin-top: 4.5%;
   padding-bottom: 100%;
   border-radius: 100%;
   background-color: $grey-3;
@@ -215,7 +215,7 @@ img {
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 15% 0 0 0;
+  padding: 32.5% 4% 0 4%;
 
   &:after {
     content: '';
@@ -225,13 +225,21 @@ img {
 }
 
 #number {
-  font-size: 375%;
+  font-size: 475%;
+  line-height: 0.8;
   font-weight: bold;
 }
 
 .caption {
   line-height: 1.2;
-  small {
-    display: block;
-  }
+}
+
+#circle-cover {
+  visibility: hidden;
+  position: absolute;
+  background-color: $white;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
