--- a/views/assets/stylesheets/application.css
+++ b/views/assets/stylesheets/application.css
@@ -76,26 +76,26 @@ body.bring-in .crest .slider {
 }
 body.bring-in .exemplar .slider {
   width: 65%;
-  transition: width 0.75s ease-out 0.3s;
+  transition: width 0.75s ease-out 0.5s;
 }
 body.bring-in .name .slider {
   width: 0;
-  transition: width 1s ease-out 0.3s;
+  transition: width 1s ease-out 0.75s;
 }
 body.bring-in .lede {
   opacity: 1;
   transform: translateX(0);
-  transition: all 0.5s ease-out 0.85s;
+  transition: all 0.5s ease-out 1.5s;
 }
 body.bring-in .url {
   opacity: 1;
   transform: translateX(0);
-  transition: all 0.5s ease-out 1.15s;
+  transition: all 0.5s ease-out 1.6s;
 }
 body.bring-in .circle {
   opacity: 1;
   transform: scale(1);
-  transition: all 0.25s ease-out 1.7s;
+  transition: all 0.25s ease-out 2.5s;
 }
 
 body.slide-out .cover {
@@ -189,7 +189,7 @@ img {
   color: #fff;
   background-color: #d53880;
   font-size: 75%;
-  margin-right: 0;
+  margin: 0 0.2em;
 }
 @media (min-width: 641px) {
   .phase-tag {
@@ -211,6 +211,7 @@ img {
 .phase-tag.public {
   color: #0b0c0c;
   background-color: transparent;
+  margin: 0;
 }
 
 .lede {
@@ -226,7 +227,6 @@ img {
   position: relative;
   width: 100%;
   height: 0;
-  margin-top: 4.5%;
   padding-bottom: 100%;
   border-radius: 100%;
   background-color: #dee0e2;
@@ -240,7 +240,7 @@ img {
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 15% 0 0 0;
+  padding: 32.5% 4% 0 4%;
 }
 .inner:after {
   content: '';
@@ -249,13 +249,21 @@ img {
 }
 
 #number {
-  font-size: 375%;
+  font-size: 475%;
+  line-height: 0.8;
   font-weight: bold;
 }
 
 .caption {
   line-height: 1.2;
 }
-.caption small {
-  display: block;
+
+#circle-cover {
+  visibility: hidden;
+  position: absolute;
+  background-color: white;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
