--- a/views/assets/scss/application.scss
+++ b/views/assets/scss/application.scss
@@ -152,7 +152,7 @@ img {
 
 .details {
   width: 66.666%;
-  padding: 7% 4.5% 0 0;
+  padding: 7% 7% 0 0;
 }
 
 .exemplar {
@@ -195,12 +195,14 @@ img {
 
 .data {
   width: 33.333%;
+  padding: 0 3%;
 }
 
 .circle {
   position: relative;
   width: 100%;
   height: 0;
+  margin-top: 5.5%;
   padding-bottom: 100%;
   border-radius: 100%;
   background-color: $grey-3;
@@ -215,7 +217,7 @@ img {
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 32.5% 4% 0 4%;
+  padding: 36.5% 0 0 0;
 
   &:after {
     content: '';
@@ -225,13 +227,17 @@ img {
 }
 
 #number {
-  font-size: 475%;
-  line-height: 0.8;
+  font-size: 425%;
+  letter-spacing: -0.025em;
+  line-height: 0.5;
   font-weight: bold;
 }
 
 .caption {
+  font-size: 90%;
   line-height: 1.2;
+  color: $grey-1;
+  padding: 2% 5% 0 5%;
 }
 
 #circle-cover {
