--- a/views/assets/stylesheets/application.css
+++ b/views/assets/stylesheets/application.css
@@ -156,7 +156,7 @@ img {
 /* ******************************************************** */
 .details {
   width: 66.666%;
-  padding: 7% 4.5% 0 0;
+  padding: 7% 7% 0 0;
 }
 
 .exemplar {
@@ -221,12 +221,14 @@ img {
 /* ******************************************************** */
 .data {
   width: 33.333%;
+  padding: 0 3%;
 }
 
 .circle {
   position: relative;
   width: 100%;
   height: 0;
+  margin-top: 5.5%;
   padding-bottom: 100%;
   border-radius: 100%;
   background-color: #dee0e2;
@@ -240,7 +242,7 @@ img {
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 32.5% 4% 0 4%;
+  padding: 36.5% 0 0 0;
 }
 .inner:after {
   content: '';
@@ -249,13 +251,17 @@ img {
 }
 
 #number {
-  font-size: 475%;
-  line-height: 0.8;
+  font-size: 425%;
+  letter-spacing: -0.025em;
+  line-height: 0.5;
   font-weight: bold;
 }
 
 .caption {
+  font-size: 90%;
   line-height: 1.2;
+  color: #6f777b;
+  padding: 2% 5% 0 5%;
 }
 
 #circle-cover {
