--- a/views/assets/stylesheets/application.css
+++ b/views/assets/stylesheets/application.css
@@ -104,6 +104,18 @@ body.slide-out .cover {
 }
 
 /* ******************************************************** */
+/* UGH. */
+#preload {
+  visibility: hidden;
+  position: absolute;
+  left: -999em;
+  top: -999em;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+/* ******************************************************** */
 html, body {
   width: 100%;
   height: 100%;
