--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,17 @@
 
   <body>
 
+    <div id="preload">
+      <img src="/assets/images/crest-bis.svg">
+      <img src="/assets/images/crest-co.svg">
+      <img src="/assets/images/crest-defra.svg">
+      <img src="/assets/images/crest-dot.svg">
+      <img src="/assets/images/crest-dwp.svg">
+      <img src="/assets/images/crest-hmrc.svg">
+      <img src="/assets/images/crest-ho.svg">
+      <img src="/assets/images/crest-moj.svg">
+    </div>
+
     <div id="template-target" class="item"></div>
 
     <div class="cover"></div>
