--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
           {{ title }} 
           <span class="phase-tag {{ status }}">{{ status }}</span>
           {{#if publicbeta}}
-            <span class="phase-tag public">public</span>
+            &nbsp;<span class="phase-tag public">public</span>
           {{/if}}
           <div class="slider"></div>
         </div>
