--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
 
         <div class="exemplar">
           Exemplar {{ number }}
-          <div class="slider"></div>
+          <!--<div class="slider"></div>-->
         </div>
 
         <div class="name">
@@ -52,7 +52,7 @@
           {{#if publicbeta}}
             &nbsp;<span class="phase-tag public">public</span>
           {{/if}}
-          <div class="slider"></div>
+          <!--<div class="slider"></div>-->
         </div>
 
         <p class="lede">{{{ intro }}}</p>
