Still got no rhythm

--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,7 @@
 
       <div class="data">
 
-        <div class="circle last-to-show">
+        <div class="circle">
           <div class="inner">
             <div class="online">
               <span id="number">{{ stat }}</span>
@@ -76,7 +76,7 @@
 
       </div>
 
-      <div class="url">{{ url }}</div>
+      <div class="url last-to-show">{{ url }}</div>
     </script>
 
   </body>
