--- a/views/assets/scss/application.scss
+++ b/views/assets/scss/application.scss
@@ -159,11 +159,15 @@ body {
   margin: 0;
   font-family: "nta", Arial, sans-serif;
   font-weight: normal;
-  font-size: 250%; // 40px
+  font-size: 200%; // 
   line-height: 1;
   color: $black;
   background-color: $white;
   text-rendering: opitimizeLegibility;
+
+  @media (min-width: 1900px) {
+    font-size: 250%; // 40px
+  }
 }
 
 p {
@@ -281,10 +285,14 @@ img {
 }
 
 #number {
-  font-size: 425%;
+  font-size: 350%;
   letter-spacing: -0.025em;
   line-height: 0.5;
   font-weight: bold;
+
+  @media (min-width: 1900px) {
+    font-size: 425%;
+  }
 }
 
 .caption {
