--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="name">
-          {{ title }} 
+          {{{ title }}} 
           <span class="phase-tag {{ status }}">{{ status }}</span>
           {{#if publicbeta}}
             &nbsp;<span class="phase-tag public">public</span>
